Refactored script to use common-library

--- a/configurations/test.ini
+++ b/configurations/test.ini
@@ -11,9 +11,9 @@ version: 0.1.0
 appVersion: 1.16.0
 maintainers: DevOps
 sources: https://example.com/test
-baselineName: baseline
-baselineVersion: 0.1.6
-baselineRepository: https://hobops-helm-charts.storage.googleapis.com
+baseChartName: common-library
+baseChartVersion: 1.0.11
+baseChartRepository: https://hobops-helm-charts.storage.googleapis.com
 
 [components]
 ConfigMap:
