fix: correcting .ini config file

--- a/config_files/input/configurations/k3s01-nginx-test.ini
+++ b/config_files/input/configurations/k3s01-nginx-test.ini
@@ -1,10 +1,10 @@
 [kubernetes]
-context: default
+context: k3s01
 namespace: default
 
 [chart]
 apiVersion: v2
-name: test
+name: k3s01
 description: A Helm chart for Kubernetes
 type: application
 version: 0.1.0
