feat: refactoring mapper for general use

--- a/config_files/input/configurations/k3s01-nginx-test.ini
+++ b/config_files/input/configurations/k3s01-nginx-test.ini
@@ -9,8 +9,10 @@ description: A Helm chart for Kubernetes
 type: application
 version: 0.1.0
 appVersion: 1.16.0
-maintainers: DevOps
-sources: https://example.com/test
+maintainers:
+    DevOps
+sources:
+    https://example.com/test
 baseChartName: common-library
 baseChartVersion: 1.0.11
 baseChartRepository: https://hobops-helm-charts.storage.googleapis.com
