feat: introducing helm_statefulset_vars_creator

--- a/config_files/input/configurations/k3s01-nginx-test.ini
+++ b/config_files/input/configurations/k3s01-nginx-test.ini
@@ -22,7 +22,8 @@ ConfigMap:
     example-html
 Deployment:
     nginx-deployment
+    my-nginx-deployment
 Ingress:
     nginx-deployment
-Pod:
-    mc2
+StatefulSet:
+    web-statefulset
